--- a/index.html
+++ b/index.html
@@ -44,10 +44,10 @@
 				<img src="./assets/images/slider/ryoji-iwata-wUZjnOv7t0g-unsplash.avif" class="d-block w-100" alt="Homme d'affaire japonais traversant un passage piéton du carrefour de Shibuya.">
 			</div>
 			<div class="carousel-item">
-				<img src="./assets/images/slider/nicholas-green-nPz8akkUmDI-unsplash.avif" class="d-block w-100" alt="Jeunes adultes assistant à un concert au sein de la foule.">
+				<img src="./assets/images/slider/nicholas-green-nPz8akkUmDI-unsplash.avif" class="d-block w-100" loading="lazy" alt="Jeunes adultes assistant à un concert au sein de la foule.">
 			</div>
 			<div class="carousel-item">
-				<img src="./assets/images/slider/edward-cisneros-3_h6-1NPDGw-unsplash.avif" class="d-block w-100" alt="Jeunes mariés célébrant leur union par un baiser autour de spectateurs enthousiastes.">
+				<img src="./assets/images/slider/edward-cisneros-3_h6-1NPDGw-unsplash.avif" class="d-block w-100" loading="lazy" alt="Jeunes mariés célébrant leur union par un baiser autour de spectateurs enthousiastes.">
 			</div>
 		</div>
 		<button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
@@ -62,7 +62,7 @@
 </div>
 <div id="about">
 	<div class="picture left">
-		<img src="./assets/images/nina.avif" alt="Photo de profil de Nina Carducci">
+		<img src="./assets/images/nina.avif" loading="lazy" alt="Photo de profil de Nina Carducci">
 	</div>
 	<div id="about-me">
 		<h3 class="about-me__title">A propos de moi</h3>
@@ -75,15 +75,15 @@
 	<h3 class="title">Portfolio</h3>
 	<div class="container py-3">
 		<div class="gallery" style="display: none">
-			<img data-gallery-tag="Concert" class="gallery-item" src="./assets/images/gallery/concerts/aaron-paul-wnX-fXzB6Cw-unsplash.avif" alt="Vue depuis la fosse d'un concert d'Aaron Paul."/>
-			<img data-gallery-tag="Entreprises" class="gallery-item" src="./assets/images/gallery/entreprise/ali-morshedlou-WMD64tMfc4k-unsplash.avif" alt="Portrait d'un homme d'affaire croisant les bras en tenue élégante."/>
-			<img data-gallery-tag="Entreprises" class="gallery-item" src="./assets/images/gallery/entreprise/jason-goodman-tHO1_OuKbg0-unsplash.avif" alt="Jeune femme riant pendant une réunion d'entreprise."/>
-			<img data-gallery-tag="Mariages" class="gallery-item" src="./assets/images/gallery/mariage/hannah-busing-RvF2R_qMpRk-unsplash.avif" alt="Photo des mains de jeunes mariés avec une mise au point sur la bague de mariage."/>
-			<img data-gallery-tag="Portrait" class="gallery-item" src="./assets/images/gallery/portraits/ade-tunji-rVkhWWZFAtQ-unsplash.avif" alt="Portrait en buste d'un jeune homme les yeux fermés face au soleil."/>
-			<img data-gallery-tag="Mariages" class="gallery-item" src="./assets/images/gallery/mariage/jakob-owens-SiniLJkXhMc-unsplash.avif" alt="Photo de mariage d'un couple, posant devant un imposant palmier."/>
-			<img data-gallery-tag="Portrait" class="gallery-item" src="./assets/images/gallery/portraits/nino-van-prattenburg--443cl1uR_8-unsplash.avif" alt="Portrait en extérieur avec une pose dynamique d'une jeune femme."/>
-			<img data-gallery-tag="Concert" class="gallery-item" src="./assets/images/gallery/concerts/austin-neill-hgO1wFPXl3I-unsplash.avif" alt="Vue sur un chanteur, entouré de fumée avec des effets de couleurs et de particules."/>
-			<img data-gallery-tag="Entreprises" class="gallery-item" src="./assets/images/gallery/entreprise/mateus-campos-felipe-Fsgzm8N0hIY-unsplash.avif" alt="Jeune femme riant, assise dans son bureau."/>
+			<img data-gallery-tag="Concert" class="gallery-item" src="./assets/images/gallery/concerts/aaron-paul-wnX-fXzB6Cw-unsplash.avif" loading="lazy" alt="Vue depuis la fosse d'un concert d'Aaron Paul."/>
+			<img data-gallery-tag="Entreprises" class="gallery-item" src="./assets/images/gallery/entreprise/ali-morshedlou-WMD64tMfc4k-unsplash.avif" loading="lazy" alt="Portrait d'un homme d'affaire croisant les bras en tenue élégante."/>
+			<img data-gallery-tag="Entreprises" class="gallery-item" src="./assets/images/gallery/entreprise/jason-goodman-tHO1_OuKbg0-unsplash.avif" loading="lazy" alt="Jeune femme riant pendant une réunion d'entreprise."/>
+			<img data-gallery-tag="Mariages" class="gallery-item" src="./assets/images/gallery/mariage/hannah-busing-RvF2R_qMpRk-unsplash.avif" loading="lazy" alt="Photo des mains de jeunes mariés avec une mise au point sur la bague de mariage."/>
+			<img data-gallery-tag="Portrait" class="gallery-item" src="./assets/images/gallery/portraits/ade-tunji-rVkhWWZFAtQ-unsplash.avif" loading="lazy" alt="Portrait en buste d'un jeune homme les yeux fermés face au soleil."/>
+			<img data-gallery-tag="Mariages" class="gallery-item" src="./assets/images/gallery/mariage/jakob-owens-SiniLJkXhMc-unsplash.avif" loading="lazy" alt="Photo de mariage d'un couple, posant devant un imposant palmier."/>
+			<img data-gallery-tag="Portrait" class="gallery-item" src="./assets/images/gallery/portraits/nino-van-prattenburg--443cl1uR_8-unsplash.avif" loading="lazy" alt="Portrait en extérieur avec une pose dynamique d'une jeune femme."/>
+			<img data-gallery-tag="Concert" class="gallery-item" src="./assets/images/gallery/concerts/austin-neill-hgO1wFPXl3I-unsplash.avif" loading="lazy" alt="Vue sur un chanteur, entouré de fumée avec des effets de couleurs et de particules."/>
+			<img data-gallery-tag="Entreprises" class="gallery-item" src="./assets/images/gallery/entreprise/mateus-campos-felipe-Fsgzm8N0hIY-unsplash.avif" loading="lazy" alt="Jeune femme riant, assise dans son bureau."/>
 		</div>
 	</div>
 	<div class="quote">
@@ -155,7 +155,7 @@
 			</form>
 		</div>
 		<div class="picture right">
-			<img src="./assets/images/camera.avif" alt="Image montrant un appareil photo.">
+			<img src="./assets/images/camera.avif" loading="lazy" alt="Image montrant un appareil photo.">
 		</div>
 	</div>
 </div>
