Ajout référencement local et réseaux sociaux

--- a/index.html
+++ b/index.html
@@ -2,21 +2,61 @@
 <html>
 <head>
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<meta charset="UTF-8">
 	<meta name="description" content="Découvrez les services de photographie professionnelle de Nina Carducci.
 	 Spécialisée dans les séances photo de portrait, mariage, événements spéciaux et bien plus encore. 
 	 Des images captivantes et mémorables qui immortalisent vos moments les plus précieux. 
 	 Contactez-moi dès aujourd'hui pour réaliser votre devis personnalisé !">
+	<meta name="keywords" content="Photographe, Photographie, Portrait, Mariage, Événement, Studio photo, Séance photo, Mode, Beauté, Shooting photo,
+	 Paysage, Lifestyle, Famille, Enfants, Bébé, Concert, Business, Book photo, Artiste, Créatif, Professionnel">
+	<meta name="author" content="Nina Carducci">
 	<title>Nina Carducci - Photographie</title>
 	<link rel="stylesheet" href="./assets/bootstrap/bootstrap.css">
 	<link rel="stylesheet" href="./assets/style.css">
 	<link rel="preconnect" href="https://fonts.googleapis.com">
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 	<link href="https://fonts.googleapis.com/css2?family=Inter&family=Spectral:ital,wght@0,400;1,300;1,400;1,800&display=swap" rel="stylesheet">
-	<meta charset="UTF-8">
 	<script src="./assets/bootstrap/bootstrap.bundle.js"></script>
 	<script src="https://code.jquery.com/jquery-3.4.1.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
 	<script src="./assets/maugallery.js"></script>
 	<script src="./assets/scripts.js"></script>
+	<!-- Balises meta Opengraph pour Facebook-->
+	<meta property="og:title" content="Nina Carducci - Photographie">
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://tvallat.github.io/Nina-Carducci/">
+    <meta property="og:image" content="https://tvallat.github.io/Nina-Carducci/assets/images/nina.avif">
+    <meta property="og:description" content="Découvrez les services de photographie professionnelle de Nina Carducci.
+	Spécialisée dans les séances photo de portrait, mariage, événements spéciaux et bien plus encore. 
+	Des images captivantes et mémorables qui immortalisent vos moments les plus précieux. 
+	Contactez-moi dès aujourd'hui pour réaliser votre devis personnalisé !">
+	<!-- Balises meta Twitter Cards-->
+	<meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:title" content="Nina Carducci - Photographie">
+	<meta name="twitter:site" content="https://tvallat.github.io/Nina-Carducci/">
+	<meta name="twitter:image" content="https://tvallat.github.io/Nina-Carducci/assets/images/nina.avif">
+    <meta name="twitter:description" content="Découvrez les services de photographie professionnelle de Nina Carducci.
+	Spécialisée dans les séances photo de portrait, mariage, événements spéciaux et bien plus encore. 
+	Des images captivantes et mémorables qui immortalisent vos moments les plus précieux. 
+	Contactez-moi dès aujourd'hui pour réaliser votre devis personnalisé !">
+	<!-- Référencement local -->
+	<script type="application/ld+json">
+		{
+		  "@context": "https://schema.org/",
+		  "@type": "Photographer",
+		  "name": "Nina Carducci",
+		  "address": {
+			"@type": "PostalAddress",
+			"streetAddress": "68 avenue Alsace-Lorraine",
+			"addressLocality": "Bordeaux",
+			"postalCode": "33200",
+			"addressCountry": "France"
+		  },
+		  "telephone": "05 56 67 78 89",
+		  "openingHours": [
+			"Mo-Fr 10:00-19:00"
+		  ]
+		}
+		</script>
 </head>
 <body>
 <div class="top-header">
