Correction référencement local @type

--- a/index.html
+++ b/index.html
@@ -40,23 +40,24 @@
 	Contactez-moi dès aujourd'hui pour réaliser votre devis personnalisé !">
 	<!-- Référencement local -->
 	<script type="application/ld+json">
-		{
-		  "@context": "https://schema.org/",
-		  "@type": "Photographer",
-		  "name": "Nina Carducci",
-		  "address": {
-			"@type": "PostalAddress",
-			"streetAddress": "68 avenue Alsace-Lorraine",
-			"addressLocality": "Bordeaux",
-			"postalCode": "33200",
-			"addressCountry": "France"
-		  },
-		  "telephone": "05 56 67 78 89",
-		  "openingHours": [
-			"Mo-Fr 10:00-19:00"
-		  ]
-		}
-		</script>
+	{
+		"@context": "https://schema.org/",
+		"@type": "LocalBusiness",
+		"name": "Nina Carducci - Photographie",
+		"description": "Photographe spécialisé dans les portraits, les mariages et les événements spéciaux.",
+		"address": {
+		"@type": "PostalAddress",
+		"streetAddress": "68 avenue Alsace-Lorraine",
+		"addressLocality": "Bordeaux",
+		"postalCode": "33200",
+		"addressCountry": "France"
+		},
+		"telephone": "05 56 67 78 89",
+		"openingHours": [
+		"Mo-Fr 10:00-19:00"
+		]
+	}
+	</script>
 </head>
 <body>
 <div class="top-header">
