--- a/index.html
+++ b/index.html
@@ -3,11 +3,9 @@
 <head>
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta charset="UTF-8">
-	<meta name="description" content="Découvrez les services de photographie professionnelle de Nina Carducci.
-	 Spécialisée dans les séances photo de portrait, mariage, événements spéciaux et bien plus encore. 
-	 Des images captivantes et mémorables qui immortalisent vos moments les plus précieux. 
-	 Contactez-moi dès aujourd'hui pour réaliser votre devis personnalisé !">
-	<meta name="keywords" content="Photographe, Photographie, Portrait, Mariage, Événement, Studio photo, Séance photo, Mode, Beauté, Shooting photo,
+	<meta name="description" content="Nina Carducci est spécialisée dans les séances photo de portrait, mariage, événements spéciaux, etc. 
+	 Contactez-moi pour immortaliser vos plus beaux moments."> <!-- 160 char -->
+	<meta name="keywords" content="Photographe, Photographie, Portrait, Bordeaux, Mariage, Événement, Studio photo, Séance photo, Mode, Beauté, Shooting photo,
 	 Paysage, Lifestyle, Famille, Enfants, Bébé, Concert, Business, Book photo, Artiste, Créatif, Professionnel">
 	<meta name="author" content="Nina Carducci">
 	<title>Nina Carducci - Photographie</title>
@@ -25,19 +23,15 @@
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://tvallat.github.io/Nina-Carducci/">
     <meta property="og:image" content="https://tvallat.github.io/Nina-Carducci/assets/images/nina.avif">
-    <meta property="og:description" content="Découvrez les services de photographie professionnelle de Nina Carducci.
-	Spécialisée dans les séances photo de portrait, mariage, événements spéciaux et bien plus encore. 
-	Des images captivantes et mémorables qui immortalisent vos moments les plus précieux. 
-	Contactez-moi dès aujourd'hui pour réaliser votre devis personnalisé !">
+    <meta property="og:description" content="Nina Carducci est spécialisée dans les séances photo de portrait, mariage, événements spéciaux, etc. 
+	Contactez-moi pour immortaliser vos plus beaux moments.">
 	<!-- Balises meta Twitter Cards-->
 	<meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:title" content="Nina Carducci - Photographie">
 	<meta name="twitter:site" content="https://tvallat.github.io/Nina-Carducci/">
 	<meta name="twitter:image" content="https://tvallat.github.io/Nina-Carducci/assets/images/nina.avif">
-    <meta name="twitter:description" content="Découvrez les services de photographie professionnelle de Nina Carducci.
-	Spécialisée dans les séances photo de portrait, mariage, événements spéciaux et bien plus encore. 
-	Des images captivantes et mémorables qui immortalisent vos moments les plus précieux. 
-	Contactez-moi dès aujourd'hui pour réaliser votre devis personnalisé !">
+    <meta name="twitter:description" content="Nina Carducci est spécialisée dans les séances photo de portrait, mariage, événements spéciaux, etc. 
+	Contactez-moi pour immortaliser vos plus beaux moments.">
 	<!-- Référencement local -->
 	<script type="application/ld+json">
 	{
@@ -56,13 +50,14 @@
 		"openingHours": [
 		"Mo-Fr 10:00-19:00"
 		]
+		"priceRange": "€50 - €400"
 	}
 	</script>
 </head>
 <body>
 <div class="top-header">
-	<h3 class="name">Nina Carducci</h3>
-	<div class="nav">   
+	<h1 class="name">Nina Carducci</h1>
+	<nav class="nav">   
 		<ul>
 			<li><a href="#about">À propos</a></li>
 			<li><a href="#gallery">Galerie</a></li>
@@ -70,10 +65,9 @@
 			<li><a href="#contact">Contact</a></li>
 			<li><a class="social-link" href="https://www.instagram.com/ninacarducci.photo/?hl=fr" target="_blank"><img src="assets/images/instagram.png" alt="Logo instagram"></a></li>
 		</ul>
-	</div>
+	</nav>
 </div>
 <div id="header">
-
 	<div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel">
 		<div class="carousel-indicators">
 			<button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
@@ -106,14 +100,14 @@
 		<img src="./assets/images/nina.avif" loading="lazy" alt="Photo de profil de Nina Carducci">
 	</div>
 	<div id="about-me">
-		<h3 class="about-me__title">A propos de moi</h3>
-		<h6 class="about-me__introduction">Devenir photographe était pour moi une évidence. Comme si j’y étais prédestiné. Saisir un moment, une émotion, une situation, un endroit, une lumière et les rendre immortels, voilà ce qui me fait vibrer.</h6>
+		<h2 class="about-me__title">A propos de moi</h2>
+		<h3 class="about-me__introduction">Devenir photographe était pour moi une évidence. Comme si j’y étais prédestiné. Saisir un moment, une émotion, une situation, un endroit, une lumière et les rendre immortels, voilà ce qui me fait vibrer.</h3>
 		<p>Nous passons notre vie à chercher le bonheur, et lorsque nous y touchons, nous n’avons qu’une envie : le figer au travers de photographies pour le savourer avec les personnes qui sont importantes à nos yeux, ou le partager au plus grand nombre.
 			C’est ce que je vous propose : saisir ces merveilleux moments au travers de mon regard, mon approche, ma technique. Rendre ces moments immortels, afin que vous puissiez y puiser de l’amour, du bonheur, de la tendresse et de lumière à chaque fois que vous poserez les yeux sur vos photos.</p>
 	</div>
 </div>
 <div id="gallery">
-	<h3 class="title">Portfolio</h3>
+	<h2 class="title">Portfolio</h2>
 	<div class="container py-3">
 		<div class="gallery" style="display: none">
 			<img data-gallery-tag="Concert" class="gallery-item" src="./assets/images/gallery/concerts/aaron-paul-wnX-fXzB6Cw-unsplash.avif" loading="lazy" alt="Vue depuis la fosse d'un concert d'Aaron Paul."/>
@@ -130,14 +124,14 @@
 	<div class="quote">
 		<figure>
 			<blockquote>
-				<h1 class="quote__text">Un portrait n’est pas une ressemblance. Dès lors qu’une émotion ou qu’un fait est traduit en photo, il cesse d’être un fait pour devenir une opinion. L’inexactitude n’existe pas en photographie. Toutes les photos sont exactes. Aucune d’elles n’est la vérité.</h1>
+				<p class="quote__text">Un portrait n’est pas une ressemblance. Dès lors qu’une émotion ou qu’un fait est traduit en photo, il cesse d’être un fait pour devenir une opinion. L’inexactitude n’existe pas en photographie. Toutes les photos sont exactes. Aucune d’elles n’est la vérité.</p>
 			</blockquote>
 			<figcaption class="quote__author">- Richard Avedon</figcaption>
 		</figure>
 	</div>
 </div>
 <div id="services">
-	<h3 class="title">Mes services</h3>
+	<h2 class="title">Mes services</h2>
 	<div class="container">
 		<div class="service">
 			<div class="service__description">
@@ -148,7 +142,6 @@
 				<h4>350€/demi journée</h4>
 				<span>Matériel, déplacement inclus</span>
 			</div>
-
 		</div>
 		<div class="service">
 			<div class="service__description">
@@ -175,7 +168,7 @@
 <div class="quote">
 	<figure>
 		<blockquote>
-			<h1 class="quote__text">De manière inconsciente, je crois, je guette un regard, une expression, des traits ou une nostalgie capable de résumer ou plus exactement de révéler une vie</h1>
+			<p class="quote__text">De manière inconsciente, je crois, je guette un regard, une expression, des traits ou une nostalgie capable de résumer ou plus exactement de révéler une vie</p>
 		</blockquote>
 		<figcaption class="quote__author">- Richard Avedon</figcaption>
 	</figure>
@@ -183,7 +176,7 @@
 <div id="contact">
 	<div class="container">
 		<div class="form-container">
-			<h3>Une question ? Une demande de devis ?</h3>
+			<h2>Une question ? Une demande de devis ?</h2>
 			<p> N’hésitez pas à m’écrire ! Je vous répondrais en moins de 24 heures</p>
 			<form action="" method="post">
 				<label for="nom">Nom</label>
