Résolution problèmes non critiques google rich snippet

--- a/index.html
+++ b/index.html
@@ -39,12 +39,15 @@
 		"@type": "LocalBusiness",
 		"name": "Nina Carducci - Photographie",
 		"description": "Photographe spécialisé dans les portraits, les mariages et les événements spéciaux.",
+		"image": [
+  		"https://tvallat.github.io/Nina-Carducci/assets/images/nina.avif"
+		],
 		"address": {
 		"@type": "PostalAddress",
 		"streetAddress": "68 avenue Alsace-Lorraine",
 		"addressLocality": "Bordeaux",
 		"postalCode": "33200",
-		"addressCountry": "France"
+		"addressCountry": "FR"
 		},
 		"telephone": "05 56 67 78 89",
 		"openingHours": [
